notes now work
